# ray-tracing-from-the-ground-up-skeleton

./: CMakeLists.txt  Makefile  README.md
source/UserInterface/: wxraytracer.cpp  wxraytracer.h
source/World/: World.cpp  World.h
